--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <section class="links">
             <h2>Come N Here</h2>
             <div class="button-group">
-                <a href="file:///C:/MyWeb (Rafan)/Profil MarvDSoul/Sett.html" target="_blank"><span>This is The Boss</span></a>
+                <a href="Sett.html" target="_blank"><span>This is The Boss</span></a>
                 <a href="file:///C:/MyWeb (Rafan)/Profil MarvDSoul/sett 2 calude.html" target="_blank"><span>The 2nd Boss</span></a>
                 <a href="file:///C:/MyWeb (Rafan)/Profil MarvDSoul/sett gemini.html" target="_blank"><span>3rd boss</span></a>
             </div>
@@ -168,4 +168,5 @@
 
 </body>
 </html>
+
 
