--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
             <h2>Come N Here</h2>
             <div class="button-group">
                 <a href="Sett.html" target="_blank"><span>This is The Boss</span></a>
-                <a href="file:///C:/MyWeb (Rafan)/Profil MarvDSoul/sett 2 calude.html" target="_blank"><span>The 2nd Boss</span></a>
-                <a href="file:///C:/MyWeb (Rafan)/Profil MarvDSoul/sett gemini.html" target="_blank"><span>3rd boss</span></a>
+                <a href="sett 2 calude.html" target="_blank"><span>The 2nd Boss</span></a>
+                <a href="sett gemini.html" target="_blank"><span>3rd boss</span></a>
             </div>
             <p class="note">"See you tomorrow, <a>··· · ·   –·–– – ––– ··–   – ––– –– ––– ·–· ·–· ––– ·––"</a></p>
         </section>
@@ -168,5 +168,6 @@
 
 </body>
 </html>
+
 
 
